# latrend-py

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/: plot_kml_model4_cluster_trajectories.py
src/latrend/: __init__.py  report.py
src/latrend/backends/: __init__.py  r.py
src/latrend/core/: __init__.py  matrix.py  method.py  model.py  pipeline.py  trajectories.py
src/latrend/data/: __init__.py  simulate.py
src/latrend/methods/: __init__.py  features.py  kml.py  lmkm.py  random.py  rmethod.py
src/latrend/metrics/: __init__.py  cluster.py
src/latrend/plots/: __init__.py  _backend.py  _mpl.py  _theme.py  classes.py  metrics.py  trajectories.py
tests/: test_basic.py
tests/data/: kml_model4_assignments.csv  latrend_data.csv
