[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latrend"
version = "0.1.0"
description = "A framework for clustering longitudinal data -- Python port of the R package latrend."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }
authors = [
  { name = "latrend-py contributors" },
]
keywords = [
  "longitudinal",
  "trajectory",
  "clustering",
  "latent-class",
  "time-series",
  "k-means",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "black>=24.0",
]
plot = [
  "plotnine>=0.12",
]
r = [
  "rpy2>=3.5",
]

[project.urls]
Homepage = "https://github.com/s-rani1/latrend-py"
Documentation = "https://github.com/s-rani1/latrend-py#readme"
Repository = "https://github.com/s-rani1/latrend-py"
Issues = "https://github.com/s-rani1/latrend-py/issues"
Changelog = "https://github.com/s-rani1/latrend-py/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
