[metadata]
name = latrend
version = 0.1.0
description = Longitudinal trajectory clustering (Python port of the R package latrend).
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-or-later

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.24
    pandas>=2.0
    scikit-learn>=1.3
    scipy>=1.10
    matplotlib>=3.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8
    ruff>=0.5
    black>=24.0
plot =
    plotnine>=0.12
r =
    rpy2>=3.5
